Kubernetes/K8's_Operators/Logstash/operator/aiops.yaml
# aiops.yaml
aiopsYaml: |-
  [...]
