Kubernetes/K8's_Operators/Logstash/operator/operator.yaml
operatorYaml: |-  
  [...]
